# libzet

./: CHANGELOG.rst  Makefile  README.rst  pyproject.toml
libzet/: Attributes.py  NoCompare.py  Zettel.py  __init__.py  editing.py  parsing.py
libzet/util/: edit.py
tests/: test_attributes.py  test_editing.py  test_md_parsing.py  test_rst_parsing.py  test_zettel.py
tests/resources/md/: basic.md
tests/resources/rst/: basic.rst  out-of-order.rst  trailing-lines.rst
